--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ python-decouple==3.4
 djangorestframework_simplejwt==4.7.2
 drf-yasg==1.20
 django-filter==2.4.0
+django-rest-framework-social-oauth2==1.1.0
